--- a/equipment.html
+++ b/equipment.html
@@ -84,7 +84,7 @@
                         顯微鏡具備高倍率、高解析度與多段變焦功能，可放大口腔細節，提升治療精準度與可視範圍，廣泛應用於根管治療、補綴修復、微創手術等精密療程。提高手術成功率與患者舒適度，是現代精準牙科不可或缺的利器。</p>
                 </div>
                 <div class="w-1/2 p-2">
-                    <img src="https://placehold.co/600x400/" alt>
+                    <img src="./img/equipment-zumax.png" alt>
                 </div>
             </div>
         </section>
