--- a/services.html
+++ b/services.html
@@ -205,8 +205,8 @@
                             <button type="button"
                                 class="flex w-full items-start justify-between text-left "
                                 aria-controls="faq-0" aria-expanded="false">
-                                <span class="text-base/7 font-semibold">Q1.
-                                    隱適美是什麼？</span>
+                                <span class="text-base/7 font-semibold">Step
+                                    1：初診評估與拍攝影像</span>
                                 <span class="ml-6 flex h-7 items-center">
                                     <svg class="size-6" fill="none"
                                         viewBox="0 0 24 24" stroke-width="1.5"
@@ -229,22 +229,21 @@
                         </dt>
                         <dd class="mt-2 pr-12 faq-answer" id="faq-0"
                             aria-hidden="true">
-                            <p
-                                class="text-base/7 text-gray-600">隱適美（Invisalign）是一種以3D數位技術製作的透明牙套矯正系統，隱適美採用3D掃描與
-                                CAD‑CAM
-                                系統，先建立牙齒移動的全程模擬圖，再客製化透明塑膠牙套。其作用原理為「推力式」3D
-                                壓力控制（shape‑molding effect），並配置 SmartForce
-                                附件以強化特定牙齒的移動力學，如轉動、傾斜、前後移動及前牙侵入等
-                                ，使用一系列可拆卸、幾乎看不見的牙套來逐步移動牙齒。每一副牙套約每7–14天更換一次，透過微小但精準的力量設計，慢慢讓牙齒移動至理想位置。它不同於傳統金屬矯正，不需黏上牙托與鋼線，因此更加美觀、舒適、方便清潔。
-                            </p>
+                            <ul
+                                class="text-base/7 text-gray-600 list-disc">
+                                <li
+                                    class="ml-4">透過全口X光或斷層掃描（CT）了解骨量與牙齒狀況</li>
+                                <li class="ml-4">與醫師討論植牙需求與療程計劃</li>
+
+                            </ul>
                         </dd>
 
                         <dt>
                             <button type="button"
                                 class="flex w-full items-start justify-between text-left"
                                 aria-controls="faq-1" aria-expanded="false">
-                                <span class="text-base/7 font-semibold">Q2.
-                                    隱適美的優點與缺點是什麼？</span>
+                                <span class="text-base/7 font-semibold">Step
+                                    2：微創手術植入植體</span>
                                 <span class="ml-6 flex h-7 items-center">
                                     <svg class="size-6" fill="none"
                                         viewBox="0 0 24 24" stroke-width="1.5"
@@ -267,13 +266,13 @@
                         </dt>
                         <dd class="mt-2 pr-12 faq-answer" id="faq-1"
                             aria-hidden="true">
-                            <p class="text-base/7 text-gray-600">優點：
-                                • ✅ 外觀近乎隱形，不易被發現
-                                • ✅ 可拆式設計，飲食與清潔方便
-                                • ✅ 數位模擬，治療前就能看到預期成果
-                                • ✅ 矯正過程舒適，牙齒力量更均勻
-                                • ✅ 減少蛀牙、牙周病的風險
-                                • ✅ 不易脫落、不刺嘴
+                            <p class="text-base/7 text-gray-600">
+                                <ul
+                                    class="text-base/7 text-gray-600 list-disc">
+                                    <li
+                                        class="ml-4">利用導引模板輔助植入，傷口極小</li>
+                                    <li class="ml-4"> 無需翻瓣或縫合，術後恢復快、腫脹與疼痛感低</li>
+                                </ul>
                             </p>
                         </dd>
 
@@ -284,7 +283,8 @@
                                 class="flex w-full items-start justify-between text-left"
                                 aria-controls="faq-2" aria-expanded="false">
                                 <span
-                                    class="text-base/7 font-semibold">為什麼選擇隱適美？有哪些優勢？</span>
+                                    class="text-base/7 font-semibold">Step
+                                    3：等待骨整合（約3-6個月）</span>
                                 <span class="ml-6 flex h-7 items-center">
                                     <svg class="size-6" fill="none"
                                         viewBox="0 0 24 24" stroke-width="1.5"
@@ -307,22 +307,22 @@
                         </dt>
                         <dd class="mt-2 pr-12 faq-answer" id="faq-2"
                             aria-hidden="true">
-                            <p
-                                class="text-base/7 text-gray-600">選擇隱適美主要是因為它結合「美觀」、「舒適」、「科技化」、「高預測性」，特別適合在意外表、職業需求或社交場合頻繁的族群。
-                                優勢包括：
-                                • 3D數位模擬，矯正過程可視化，治療更可預期
-                                • 不易被他人察覺，社交自信不受影響
-                                • 可拆卸設計，飲食自由、清潔便利，降低蛀牙風險
-                                • 可針對局部移動做微調，咬合功能與美觀同時兼顧
-                            </p>
+                            進行植牙二階手術
+                            <ul
+                                class="text-base/7 text-gray-600 list-disc">
+                                <li class="ml-4"> 骨整合完成後，進行二階手術</li>
+                                <li class="ml-4"> 打開牙齦、安裝癒合帽，讓牙齦成形，準備裝牙冠</li>
+                                <li class="ml-4"> 植體與骨頭結合，建立穩固基礎</li>
+                                <li class="ml-4"> 視個人骨質狀況決定時間長短</li>
+                            </ul>
                         </dd>
                         <dt>
                             <button type="button"
                                 class="flex w-full items-start justify-between text-left"
                                 aria-controls="faq-3" aria-expanded="false">
                                 <span
-                                    class="text-base/7 font-semibold">Q5.
-                                    隱適美的費用怎麼計算？</span>
+                                    class="text-base/7 font-semibold">Step
+                                    4：製作並安裝假牙牙冠</span>
                                 <span class="ml-6 flex h-7 items-center">
                                     <svg class="size-6" fill="none"
                                         viewBox="0 0 24 24" stroke-width="1.5"
@@ -346,18 +346,52 @@
                         <dd class="mt-2 pr-12 faq-answer" id="faq-3"
                             aria-hidden="true">
                             <p
-                                class="text-base/7 text-gray-600">隱適美的費用主要依照下列因素決定：
-                                1. 個人牙齒狀況複雜程度（牙套數量越多，費用越高）
-                                2. 治療目標（局部微調 vs 全口矯正）
-                                3. 是否需配合其他治療（拔牙、貼片、咬合調整）
-                                4. 診所收費制度與醫師經驗值
-
-                                ➡️ 美德美學牙醫診所會依情況先進行初診與拍片評估後，再報出正式報價，也有提供
-                                分期付款方案，讓患者負擔較輕鬆。
-
+                                class="text-base/7 text-gray-600">
+                                <ul
+                                    class="text-base/7 text-gray-600 list-disc">
+                                    <li class="ml-4"> 取模製作個人化牙冠（陶瓷或全瓷）</li>
+                                    <li class="ml-4"> 安裝牙冠後調整咬合與外觀</li>
+                                </ul>
                             </p>
                         </dd>
-
+                        <dt>
+                            <button type="button"
+                                class="flex w-full items-start justify-between text-left"
+                                aria-controls="faq-6" aria-expanded="false">
+                                <span
+                                    class="text-base/7 font-semibold">Step
+                                    5：定期回診與保養</span>
+                                <span class="ml-6 flex h-7 items-center">
+                                    <svg class="size-6" fill="none"
+                                        viewBox="0 0 24 24" stroke-width="1.5"
+                                        stroke="currentColor" aria-hidden="true"
+                                        data-slot="icon">
+                                        <path stroke-linecap="round"
+                                            stroke-linejoin="round"
+                                            d="M12 6v12m6-6H6" />
+                                    </svg>
+                                    <svg class="hidden size-6" fill="none"
+                                        viewBox="0 0 24 24" stroke-width="1.5"
+                                        stroke="currentColor" aria-hidden="true"
+                                        data-slot="icon">
+                                        <path stroke-linecap="round"
+                                            stroke-linejoin="round"
+                                            d="M18 12H6" />
+                                    </svg>
+                                </span>
+                            </button>
+                        </dt>
+                        <dd class="mt-2 pr-12 faq-answer" id="faq-6"
+                            aria-hidden="true">
+                            <p
+                                class="text-base/7 text-gray-600">
+                                <ul
+                                    class="text-base/7 text-gray-600 list-disc">
+                                    <li class="ml-4"> 植牙後定期追蹤清潔與檢查</li>
+                                    <li class="ml-4"> 維持牙齒健康與植體長久使用</li>
+                                </ul>
+                            </p>
+                        </dd>
                     </dl>
                 </div>
             </div>
