--- a/about.html
+++ b/about.html
@@ -36,13 +36,12 @@
             </div>
         </header>
 
-        <section class="container max-w-5xl mx-auto py-16">
+        <section class="container max-w-5xl mx-auto py-8">
             <div class="flex flex-wrap">
                 <div class="w-full px-8">
+
                     <h2
-                        class="py-4 mb-8 text-white bg-sky-600 text-center text-3xl tracking-widest"
-                        style="background: #588DD6;
-background: linear-gradient(90deg, rgba(88, 141, 214, 1) 0%, rgba(133, 204, 250, 1) 100%);">關於我們</h2>
+                        class="py-4 mb-8 text-skin font-medium text-center text-4xl tracking-widest">關於我們</h2>
                     <p class="mb-8">美德美學醫療集團，自民國67年經營至今在地深耕近40年。
                         創立於1978年，是台中市大里設立的第一間牙醫診所，服務至今，在地深耕超過40年，患者從小孩看到結婚生子，從年輕人看到變成阿公阿嬤，再帶著孫子來就診。老董醫師三個兒子也全部都是醫師，各自在不同領域服務，有牙科也有腎臟科。</p>
 
@@ -64,12 +63,10 @@ background: linear-gradient(90deg, rgba(88, 141, 214, 1) 0%, rgba(133, 204, 250,
             </div>
         </section>
 
-        <section class="container max-w-5xl mx-auto py-16">
+        <section class="container max-w-5xl mx-auto py-8">
 
             <h2
-                class="py-4 mb-8 text-white bg-sky-600 text-center text-3xl tracking-widest"
-                style="background: #588DD6;
-background: linear-gradient(90deg, rgba(88, 141, 214, 1) 0%, rgba(133, 204, 250, 1) 100%);">診所介紹</h2>
+                class="py-4 mb-8 text-skin font-medium text-center text-4xl tracking-widest">診所介紹</h2>
             <div class="flex flex-wrap">
                 <div class="w-full sm:w-1/2">
 
@@ -99,7 +96,7 @@ background: linear-gradient(90deg, rgba(88, 141, 214, 1) 0%, rgba(133, 204, 250,
                 </div>
             </div>
 
-            <div class="flex flex-wrap">
+            <div class="flex flex-wrap mt-16">
                 <div class="w-full sm:w-1/2 ">
 
                     <h3
