--- a/about.html
+++ b/about.html
@@ -63,12 +63,12 @@
             </div>
         </section>
 
-        <section class="container max-w-5xl mx-auto py-8">
+        <section class="container max-w-5xl mx-auto py-8 ">
 
             <h2
                 class="py-4 mb-8 text-skin font-medium text-center text-4xl tracking-widest">診所介紹</h2>
             <div class="flex flex-wrap">
-                <div class="w-full sm:w-1/2">
+                <div class="w-full px-8 sm:w-1/2">
 
                     <h3
                         class="text-skin border-b border-skin mb-8 text-xl pb-4">對美麗的堅持成就美德<br />
@@ -97,7 +97,7 @@
             </div>
 
             <div class="flex flex-wrap mt-16">
-                <div class="w-full sm:w-1/2 ">
+                <div class="w-full px-8 sm:w-1/2 ">
 
                     <h3
                         class="text-skin border-b border-skin mb-8 text-xl pb-4">微笑是最美的底妝<br />
@@ -126,7 +126,7 @@
             </div>
 
             <div class="flex flex-wrap">
-                <div class="w-full sm:w-1/2 ">
+                <div class="w-full sm:w-1/2 px-8 mt-8 sm:mt-0">
 
                     <h3
                         class="text-skin border-b border-skin mb-8 text-xl pb-4">走出美德，即刻蛻變美麗<br />Shine
