--- a/homepage.html
+++ b/homepage.html
@@ -395,7 +395,7 @@
                         <dd class="mt-2 pr-12 faq-answer" id="faq-6"
                             aria-hidden="true">
                             <p
-                                class="text-base/7 text-gray-600">A3：
+                                class="text-base/7 text-gray-600">
                                 傳統矯正是透過固定式金屬托槽與鋼線移動牙齒，適用於多種齒列問題，但外觀明顯、清潔困難，且配戴時容易造成口腔不適。隱適美則使用一系列透明可拆式牙套，由電腦模擬設計並精準控制牙齒推移路徑。隱適美外觀自然、舒適度高，生活自由度大，適合對外觀與便利性重視的患者。不過，隱適美較適用於輕中度齒列異常，是否適合仍須專業醫師評估。
                             </p>
                         </dd>
@@ -431,11 +431,10 @@
                             <p
                                 class="text-base/7 text-gray-600">選擇隱適美主要是因為它結合「美觀」、「舒適」、「科技化」、「高預測性」，特別適合在意外表、職業需求或社交場合頻繁的族群。
                                 優勢包括：
-                                <ul class="list-disc">
-                                    <li>3D數位模擬，矯正過程可視化，治療更可預期</li>
-                                    <li>3D數位模擬，矯正過程可視化，治療更可預期</li>
-                                    <li>不易被他人察覺，社交自信不受影響</li>
-                                    <li>可拆卸設計，飲食自由、清潔便利，降低蛀牙風險</li>
+                                <ul class="list-disc my-4">
+                                    <li class="mb-2">3D數位模擬，矯正過程可視化，治療更可預期</li>
+                                    <li class="mb-2">不易被他人察覺，社交自信不受影響</li>
+                                    <li class="mb-2">可拆卸設計，飲食自由、清潔便利，降低蛀牙風險</li>
                                     <li>可針對局部移動做微調，咬合功能與美觀同時兼顧</li>
                                 </ul>
                             </p>
@@ -635,17 +634,18 @@
         </section>
 
         <section class="py-16">
-            <div class="flex flex-wrap text-xl font-medium">
+            <div class="flex flex-wrap text-xl">
                 <div
                     class="w-full sm:w-1/2 px-4 py-8 flex items-center flex-col">
                     <h3
                         class="text-5xl text-center text-skin font-medium mb-8">董昱彥
                         院長</h3>
-                    <img src="./img/doctor-img1.jpg" alt
+                    <img src="./img/homepage_院長.jpg" alt
                         class="h-[40rem] object-cover rounded-2xl shadow-2xl"
                         style="width: 80%;">
                 </div>
-                <div class="w-full sm:w-1/2 w-1/2 px-8 py-8">
+                <div
+                    class="w-full sm:w-1/2 w-1/2 px-8 py-8 text-base tracking-widest leading-8">
                     <p>
                         從小對藝術就非常有興趣, 除了學術課業之外, 各種藝術創作, 繪畫, 攝影 音樂等都為強項.
                         這也在日後對於董醫師對牙齒與微笑美學的標準 奠定了很重要的基礎。
@@ -663,6 +663,8 @@
                     <div class="flex justify-center text-sm">
                         <ul class="list-disc">
                             <li class="my-2">日本東京齒科大學 Kenko's S&E LH矯正專精課程</li>
+                            <li class="my-2">美國NYU Linhart
+                                DIO數位牙醫學院認證醫師現任祐民牙醫隱適美旗艦店院長</li>
                             <li class="my-2">DSD國際數位微笑設計認證醫師</li>
                             <li class="my-2">隱適美Invisalign隱性矯正認證醫師</li>
                             <li class="my-2">2021 Invisalign 白金級醫師</li>
@@ -676,8 +678,7 @@
                             <li class="my-2">日本東京Kuribayashi牙周手術訓練認證醫師</li>
                             <li class="my-2">Straumann Emdogain 專訓課程認證醫師</li>
                             <li class="my-2">Dentium植牙兩岸專任講師</li>
-                            <li class="my-2">美國NYU Linhart
-                                DIO數位牙醫學院認證醫師現任祐民牙醫隱適美旗艦店院長</li>
+
                         </ul>
                     </div>
                 </div>
@@ -964,7 +965,7 @@
                                     <td><span class>●</span></td>
                                     <td><span class>●</span></td>
                                     <td><span class>●</span></td>
-                                    <td><span class>●</span></td>
+                                    <td><span class></span></td>
                                 </tr>
                             </tbody>
                         </table>
@@ -976,7 +977,7 @@
                         class="w-full sm:w-1/2 px-8 sm:px-6 mt-8 sm:mt-0">
                         <ul class=" font-normal">
                             <li class="mb-4 flex items-center">
-                                美德美學牙醫診所</li>
+                                美德牙醫診所</li>
                             <li class="mb-4 flex">
                                 <svg xmlns="http://www.w3.org/2000/svg"
                                     fill="none" stroke="currentColor"
@@ -1095,7 +1096,7 @@
 
                 <div class="text-white flex flex-wrap mx-0 px-3 sm:-mx-6">
                     <div
-                        class="w-full sm:w-1/2 leading-8 text-xl px-8 sm:px-6 mt-8 sm:mt-0">
+                        class="w-full sm:w-1/2 leading-8 px-8 sm:px-6 mt-8 sm:mt-0">
                         我們是一家結合專業技術與細緻服務的全能型牙醫診所，位於台北東區，打造宛如五星級飯店般舒適的就診環境，從植牙、美學、
                         矯正到日常保健，每一個細節都用心守護。在這裡，我們不只治療牙齒，更照顧您的感受，讓每位走出診所的您，都能重拾自信，展現最美的笑容。
                     </div>
@@ -1186,7 +1187,7 @@ counters.forEach( counter => {
       const time = value / speed;
      if(data < value) {
           counter.innerText = Math.ceil(data + time);
-          setTimeout(animate, 1);
+          setTimeout(animate, 0.5);
         }else{
           counter.innerText = value;
         }
