--- a/homepage.html
+++ b/homepage.html
@@ -572,11 +572,9 @@
         <div class="parallax relative bg-cover">
             <div
                 class="absolute text-white w-4xl top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 z-50 text-center">
-                <h3 class="mb-4 text-4xl">選擇我們為您植牙的理由</h3>
-                <p class="leading-8">2023 年全球的人工植牙成功率為
-                    95%；同年，祐民牙醫診所植牙矯正中心的植牙成功率為
-                    99.5%，超出了世界平均值 5
-                    個百分點，我們秉持著不斷努力的精神與細心的手術技巧，為了提供更完善的醫療服務而繼續向前邁進！</p>
+                <h3 class="mb-4 text-4xl">選擇我們為您做隱適美的理由</h3>
+                <p
+                    class="leading-8">我們擁有專業隱適美認證醫師團隊，累積多年矯正經驗，善於客製精準療程，搭配高階口掃與數位模擬技術，讓您在療程開始前就能清楚預見矯正成果。我們重視每一次回診細節，確保牙齒移動準確、效率穩定，陪伴您安心微笑每一步。</p>
             </div>
         </div>
 
@@ -822,7 +820,8 @@
                     <div
                         class="w-full sm:w-1/2 px-8 sm:px-6 mt-8 sm:mt-0">
                         <ul class=" font-normal">
-                            <li class="mb-4 flex items-center">
+                            <li
+                                class="mb-4 flex items-center border-b border-sky-200 pb-6">
                                 美德美學牙醫診所</li>
                             <li class="mb-4 flex">
                                 <svg xmlns="http://www.w3.org/2000/svg"
@@ -949,9 +948,9 @@
                         <table
                             class="w-full border-collapse  text-center">
                             <tbody>
-                                <tr>
+                                <tr class="border-sky-200 border-b">
                                     <th>&nbsp;</th>
-                                    <td>禮拜一</td>
+                                    <td class="border-sky-200 border-l">禮拜一</td>
                                     <td>禮拜二</td>
                                     <td>禮拜三</td>
                                     <td>禮拜四</td>
@@ -959,7 +958,8 @@
                                     <td>禮拜六</td>
                                 </tr>
                                 <tr>
-                                    <th>12:00 – 19:00</th>
+                                    <th class="border-sky-200 border-r">12:00 –
+                                        19:00</th>
                                     <td><span class>●</span></td>
                                     <td><span class>●</span></td>
                                     <td><span class>●</span></td>
@@ -976,7 +976,8 @@
                     <div
                         class="w-full sm:w-1/2 px-8 sm:px-6 mt-8 sm:mt-0">
                         <ul class=" font-normal">
-                            <li class="mb-4 flex items-center">
+                            <li
+                                class="mb-4 flex items-center border-b border-sky-200 pb-6">
                                 美德牙醫診所</li>
                             <li class="mb-4 flex">
                                 <svg xmlns="http://www.w3.org/2000/svg"
@@ -1038,9 +1039,9 @@
                         <table
                             class="w-full border-collapse text-center">
                             <tbody>
-                                <tr>
+                                <tr class="border-b border-sky-200">
                                     <th>&nbsp;</th>
-                                    <td>禮拜一</td>
+                                    <td class="border-sky-200 border-l">禮拜一</td>
                                     <td>禮拜二</td>
                                     <td>禮拜三</td>
                                     <td>禮拜四</td>
@@ -1048,7 +1049,8 @@
                                     <td>禮拜六</td>
                                 </tr>
                                 <tr>
-                                    <th>09:30 – 11:30</th>
+                                    <th class="border-sky-200 border-r">09:30 –
+                                        11:30</th>
                                     <td><span class>●</span></td>
                                     <td><span class>●</span></td>
                                     <td><span class>●</span></td>
@@ -1057,7 +1059,8 @@
                                     <td><span class>●</span></td>
                                 </tr>
                                 <tr>
-                                    <th>14:00 – 16:30</th>
+                                    <th class="border-sky-200 border-r">14:00 –
+                                        16:30</th>
                                     <td><span class>●</span></td>
                                     <td><span class>●</span></td>
                                     <td><span class>●</span></td>
@@ -1066,7 +1069,8 @@
                                     <td><span class>●</span></td>
                                 </tr>
                                 <tr>
-                                    <th>17:30 – 19:00</th>
+                                    <th class="border-sky-200 border-r">17:30 –
+                                        19:00</th>
                                     <td><span class></span></td>
                                     <td><span class></span></td>
                                     <td><span class></span></td>
@@ -1075,7 +1079,8 @@
                                     <td><span class></span></td>
                                 </tr>
                                 <tr>
-                                    <th>18:00 – 21:00</th>
+                                    <th class="border-sky-200 border-r">18:00 –
+                                        21:00</th>
                                     <td><span class>●</span></td>
                                     <td><span class>●</span></td>
                                     <td><span class>●</span></td>
