--- a/homepage.html
+++ b/homepage.html
@@ -111,7 +111,7 @@
 
              .parallax {
             /* The image used */
-            background-image: url("./img/診所-2.png");
+            background-image: url("./img/關於我們_1.png");
 
             /* Set a specific height */
             min-height: 350px;
